--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="container">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobiri.se">
+                    <a href="index.html">
                         <img src="assets/images/logo-163x163.png" alt="Mobirise" style="height: 3.8rem;">
                     </a>
                 </span>
